--- a/index.html
+++ b/index.html
@@ -5,32 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-        .grid-container {
-            display: grid;
-            grid-template-columns: auto auto auto auto;
-            background-color: transparent;
-            padding: 100px;
-          }
-          .grid-item {
-            background-color: rgba(255, 255, 255, 0.8);
-            border: 1px solid rgba(0, 0, 0, 0.8);
-            padding: 20px;
-            font-size: 30px;
-            text-align: center;
-          }
-    </style>
+    <link rel="stylesheet" type="text/css" href="movies.css">
 </head>
 <body>
-    <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
-        <div class="grid-item">7</div>
-        <div class="grid-item">8</div>
+    <div id="container">
+        <div class="header">
+            <img src="imgs/logo-pop.png">
+            <div class="topnav">
+                <a class="active" href="#home">Home</a>
+                <a href="#news">News</a>
+                <a href="#contact">Contact</a>
+                <a href="#search">Search</a>
+                <a href="#about">About</a>
+            </div>
+        </div>
+        <div class="mainbody">
+            <div class="grid-container">
+                <div class="grid-item">
+                    <img src="imgs/avengers-infinity-war.jpg" class="img-item" alt="Avengers Infinity war">
+                </div>
+                <div class="grid-item">
+                    <img src="imgs/avengers-infinity-war.jpg" class="img-item" alt="Avengers Infinity war">
+                </div>
+                <div class="grid-item">
+                    <img src="imgs/avengers-infinity-war.jpg" class="img-item" alt="Avengers Infinity war">
+                </div>
+                <div class="grid-item">
+                    <img src="imgs/avengers-infinity-war.jpg" class="img-item" alt="Avengers Infinity war">
+                </div>
+                <div class="grid-item">
+                    <img src="imgs/avengers-infinity-war.jpg" class="img-item" alt="Avengers Infinity war">
+                </div>
+                <div class="grid-item">
+                    <img src="imgs/avengers-infinity-war.jpg" class="img-item" alt="Avengers Infinity war">
+                </div>
+                <div class="grid-item">
+                    <img src="imgs/avengers-infinity-war.jpg" class="img-item" alt="Avengers Infinity war">
+                </div>
+                <div class="grid-item">
+                    <img src="imgs/avengers-infinity-war.jpg" class="img-item" alt="Avengers Infinity war">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
