--- a/index.html
+++ b/index.html
@@ -8,18 +8,27 @@
     <link rel="stylesheet" type="text/css" href="movies.css">
 </head>
 <body>
-    <div id="container">
         <div class="header">
             <img src="imgs/logo-pop.png">
+            <p class="user">
+                Fernando Cabrera | <a href="#logout">Sign out</a>
+            </p> 
             <div class="topnav">
                 <a class="active" href="#home">Home</a>
-                <a href="#news">News</a>
-                <a href="#contact">Contact</a>
-                <a href="#search">Search</a>
-                <a href="#about">About</a>
+                <a href="#popular">Popular Movies</a>
+                <a href="#top_rated">Top Rated</a>
+                <a href="#upcoming">Upcoming</a>
             </div>
         </div>
         <div class="mainbody">
+            <div style="padding: 50px">   
+                <input type="text" name="search" placeholder="Search..">
+            </div>
+            <h2 class="titles">My Favorites</h2> 
+            <hr align="center"/>
+            <p class="empty_data_text">You haven't favorited any movies yet.</p>
+            <h2 class="titles">Popular Movies</h2> 
+            <hr align="center"/>
             <div class="grid-container">
                 <div class="grid-item">
                     <img src="imgs/avengers-infinity-war.jpg" class="img-item" alt="Avengers Infinity war">
@@ -33,6 +42,10 @@
                 <div class="grid-item">
                     <img src="imgs/avengers-infinity-war.jpg" class="img-item" alt="Avengers Infinity war">
                 </div>
+            </div>
+            <h2 class="titles">Top Rated</h2> 
+            <hr align="center"/>
+            <div class="grid-container">
                 <div class="grid-item">
                     <img src="imgs/avengers-infinity-war.jpg" class="img-item" alt="Avengers Infinity war">
                 </div>
@@ -47,6 +60,5 @@
                 </div>
             </div>
         </div>
-    </div>
 </body>
 </html>
